# pycounts_524_wwm

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  conf.py  example.ipynb  make.bat  pyproject.toml
docs/: example.ipynb
src/pycounts_524_wwm/: pycounts_524_wwm.py
tests/: test_pycounts_524_wwm.py
