[tool.poetry]
name = "pycounts_524_wwm"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["wai ming wong"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
